Chapter 5 is done of databse configuration

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,10 @@
             "mode": "auto",
             "program": "./cmd/api",
             "cwd": "${workspaceFolder}",
-            "args": []
+            "args": [],
+            "env": {
+                "GREENLIGHT_DB_DSN": "postgres://greenlight:pa55word@localhost:5433/greenlight?sslmode=disable",
+            },
         }
     ]
 }
