--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,6 @@ fabric.properties
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/goland,visualstudiocode
+
+#Debug of application
+**__debug_bin**
